# median-approximation

./: .gitignore  README.md  pyproject.toml  theory.md
median-approximation/: config.py  fractal_check.py  fractals_multiple_instruments.py  main.py  multiple_instruments.py  rolling_window.py
median-approximation/configs/: figis.json
median-approximation/results/: data.json  data_20251215_174254.json  data_20251215_174430.json  data_AuiNBsD6z6.json  data_EEmUriglE2.json  data_Ou4g0t7jkS.json
