[project]
name = "median-approximation"
version = "0.1.0"
description = ""
authors = [
    {name = "Lidne",email = "george.ermekov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "tinkoff-investments (>=0.2.0b118,<0.3.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pyqt6 (>=6.10.0,<7.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
